--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 </head>
 <body>
     <header class="header">
-        <nav class="nav">
+        <div class="container">
+            <nav class="nav">
 
-            <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             
-            <ul>
-                <li><a class="navigation" href="./index.html">Studio</a></li>
-                <li><a class="navigation" href="">Portfolio</a></li>
-                <li><a class="navigation" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul>
-                <li><a class="feedback" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="feedback" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+                <ul class="nav-ul">
+                    <li><a class="navigation" href="./index.html">Studio</a></li>
+                    <li><a class="navigation" href="">Portfolio</a></li>
+                    <li><a class="navigation" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="feedback-ul">
+                    <li><a class="feedback" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="feedback" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     
     <main>
