--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     
     <main>
         <section class="order-section">
-            <h1 class="order-section-text">Effective Solutions for Your Business</h1>
-            <button type="button" class="order-button">Order Service</button>
+            <div class="container">
+                <h1 class="order-section-text">Effective Solutions for Your Business</h1>
+                <button type="button" class="order-button">Order Service</button>
+            </div>
         </section>
 
         <section class="offer-section">
