--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and 
                 sales for your business with digital marketing & growth solutions.</p>
