--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             </div>
         </section>
         <section class="portfolio-section">
+            <div class="container portfolio-container">
                 <h2 class="portfolio-section-name">Our Portfolio</h2>
                 <ul class="portfolio-section-list">
                     <li class="portfolio-list-element">
