--- a/index.html
+++ b/index.html
@@ -38,37 +38,41 @@
     
     <main>
         <section class="order-section">
-            <h1 class="order-section-text">Effective Solutions for Your Business</h1>
-            <button type="button" class="order-button">Order Service</button>
+            <div class="container order-container">
+                <h1 class="order-section-text">Effective Solutions for Your Business</h1>
+                <button type="button" class="order-button">Order Service</button>
+            </div>
         </section>
 
         <section class="offer-section">
-            <h2 class="offer-section-name">We Offer</h2>
-            <ul>
-                <li>
-                    <h3 class="offer-section-offers">Strategy</h3>
-                    <p class="offer-section-desc">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. </p>
-                </li>
+            <div class="container offer-container">
+                <h2 class="visually-hidden">We Offer</h2>
+                <ul class="offer-list">
+                    <li class="offer-list-point">
+                        <h3 class="offer-section-offers">Strategy</h3>
+                        <p class="offer-section-desc">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution. </p>
+                    </li>
 
-                <li>
-                    <h3 class="offer-section-offers">Punctuality</h3>
-                    <p class="offer-section-desc">Bring the key message to the brand's audience for 
-                        the best price within the shortest possible time.</p>
-                </li>
+                    <li class="offer-list-point">
+                        <h3 class="offer-section-offers">Punctuality</h3>
+                        <p class="offer-section-desc">Bring the key message to the brand's audience for 
+                            the best price within the shortest possible time.</p>
+                    </li>
 
-                <li>
-                    <h3 class="offer-section-offers">Diligence</h3>
-                    <p class="offer-section-desc">Research and confirm brands that present 
-                    the strongest digital growth opportunities and minimize risk.</p>
-                </li>
+                    <li class="offer-list-point">
+                        <h3 class="offer-section-offers">Diligence</h3>
+                        <p class="offer-section-desc">Research and confirm brands that present 
+                        the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
 
-                <li>
-                    <h3 class="offer-section-offers">Technologies</h3>
-                    <p class="offer-section-desc">Design practice focused on digital experiences. 
-                        We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
+                    <li class="offer-list-point">
+                        <h3 class="offer-section-offers">Technologies</h3>
+                        <p class="offer-section-desc">Design practice focused on digital experiences. 
+                            We bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="team-section">
