--- a/index.html
+++ b/index.html
@@ -124,35 +124,35 @@
                             <p class="portfolio-element-type">App</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-element">
                         <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-section-img">
                         <div class="portfolio-name-type">
                             <h3 class="portfolio-element-name">Cashless Payment</h3>
                             <p class="portfolio-element-type">Marketing</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-element">
                         <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" class="portfolio-section-img">
                         <div class="portfolio-name-type">
                             <h3 class="portfolio-element-name">Meditation App</h3>
                             <p class="portfolio-element-type">App</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-element">
                         <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-section-img">
                         <div class="portfolio-name-type">
                             <h3 class="portfolio-element-name">Taxi Service</h3>
                             <p class="portfolio-element-type">Marketing</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-element">
                         <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-section-img">
                         <div class="portfolio-name-type">
                             <h3 class="portfolio-element-name">Screen Illustrations</h3>
                             <p class="portfolio-element-type">Design</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="portfolio-list-element">
                         <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-section-img">
                         <div class="portfolio-name-type">
                             <h3 class="portfolio-element-name">Online Courses</h3>
