--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>WebStudio</title>
 </head>
 <body>
+
+                        <!-- HEADER -->
+
     <header class="header">
 
         <div class="container header-container">
@@ -35,6 +38,8 @@
 
         </div>
     </header>
+
+                        <!-- ORDER SECTION -->
     
     <main>
         <section class="order-section">
@@ -43,6 +48,8 @@
                 <button type="button" class="order-button">Order Service</button>
             </div>
         </section>
+
+                        <!-- OFFER SECTION -->
 
         <section class="offer-section">
             <div class="container offer-container">
@@ -74,6 +81,8 @@
                 </ul>
             </div>
         </section>
+
+                        <!-- TEAM SECTION -->
 
         <section class="team-section">
             <div class="container team-container">
@@ -113,6 +122,9 @@
                 </ul> 
             </div>  
         </section>
+
+                        <!-- PORTFOLIO SECTION -->
+
         <section class="portfolio-section">
             <div class="container portfolio-container">
                 <h2 class="portfolio-section-name">Our Portfolio</h2>
@@ -164,6 +176,7 @@
         </section>
     </main>
 
+                        <!-- FOOTER -->
 
     <footer class="footer">
         <div class="container footer-container">
