--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </div>
     </header>
 
-                        <!-- ORDER SECTION -->
+                        <!-- HERO SECTION -->
     
     <main>
-        <section class="order-section">
-            <div class="container order-container">
-                <h1 class="order-section-text">Effective Solutions for Your Business</h1>
-                <button type="button" class="order-button">Order Service</button>
+        <section class="hero-section">
+            <div class="container hero-container">
+                <h1 class="hero-section-text">Effective Solutions for Your Business</h1>
+                <button type="button" class="hero-button">Order Service</button>
             </div>
         </section>
 
